@@ -4,6 +4,7 @@ Changes for 1.9
 
 Changes for 1.8.2
 
+ - [ZBX-1299] added check for the minimal (1.0.0) libssh2 library version (Dmitry)
  - [ZBX-1975] fixed permission check in graphs with web ites (Aly)
  - [ZBX-2023] improved configuration triggers page (Aly)
  - [DEV-453] implemented import/export of zabbix maps (Aly)
